@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>apm-quartz-1-plugin</artifactId>
+    <name>${project.groupId}:${project.artifactId}</name>
 
     <properties>
         <version.quartz>1.7.3</version.quartz>
