@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>apm-quartz-2-plugin</artifactId>
+    <name>${project.groupId}:${project.artifactId}</name>
 
     <properties>
         <version.quartz>2.3.1</version.quartz>
